DTO and controller annotates set with attribute
